--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
 - oraclejdk8
 after_success:
-- "./gradlew cobertura coveralls --stacktrace"
+- "./gradlew jacocoTestReport coveralls --stacktrace"
 deploy:
   provider: releases
   api_key:
