--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ jacocoTestReport {
         xml.enabled true
         csv.enabled false
         html.destination "${buildDir}/reports/jacocoHtml"
-        xml.destination "${buildDir}/reports/jacoco/test"
+        xml.destination "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
     }
 
     afterEvaluate {
