--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile group: 'commons-net', name: 'commons-net', version: '3.5'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-waf', version: '1.11.39'
     compile group: 'com.fieldju', name: 'slack-client', version: '2.0.0'
+    compile group: 'com.brsanthu', name: 'google-analytics-java', version: '1.1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
