Convert cerberus-cloudfront-lambda into cerberus-serverless-components and make the project  multi-module with a cloudfront module to allow us to add more lambdas/serverless modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
-rootProject.name = 'cerberus-cloudfront-lambda'
+rootProject.name = 'cerberus-serverless-components'
+include "cerberus-cloudfront-lambda"
 
