Add x region backup lambda and cloudformation for creating a VPC in us east for lambdas

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,11 @@ gradle-app.setting
 src/main/resources/cloudformation/**
 !src/main/resources/cloudformation/.gitkeep
 /smaas-cf/.idea/
+
+# Ignore company specific props
+**/profile/*
+!**/profile/default.properties
+/profile/test.properties
+/profile/dev.properties
+/profile/prod.properties
+/profile/global.properties
