--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'cerberus-serverless-components'
-include "cerberus-cloudfront-lambda"
+include 'cerberus-cloudfront-lambda',
+        'cerberus-cross-region-backup-lambda',
+        'cerberus-lambda-vpc'
+
 
