--- a/gradle/buildscript.gradle
+++ b/gradle/buildscript.gradle
@@ -1,7 +1,9 @@
 repositories {
+    maven { url "https://plugins.gradle.org/m2/" }
     jcenter()
 }
 dependencies {
     classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+    classpath "gradle.plugin.com.fieldju:gradle-aws-sam-deployer-plugin:1.2.0"
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
 }
