--- a/cerberus-cross-region-backup-lambda/build.gradle
+++ b/cerberus-cross-region-backup-lambda/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     region = project.'backup.region'
     s3Bucket = project.'backup.lambda_artifact.s3_bucket'
     s3Prefix = "${project.getName()}-artifact-uploads"
-    stackName = "${project.environment}-${project.'backup.stack_suffix'}-cerberus-cross-region-backup"
+    stackName = "${project.environment}-${project.'backup.stack_suffix'}-${project.getName()}"
     samTemplatePath = "${project.projectDir}${File.separator}application.yaml"
     tokenArtifactMap = [
             '@@CODE_URI@@': "${project.buildDir}${File.separator}libs${File.separator}${project.getName()}-${version}.jar"
