--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'cerberus-serverless-components'
 include 'cerberus-cloudfront-lambda',
         'cerberus-cross-region-backup-lambda',
-        'cerberus-lambda-vpc'
+        'cerberus-lambda-vpc',
+        'cerberus-artemis-kpi-lambda'
 
 
