--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
 // load environment specific props from global and environment profiles
 def environment = project.hasProperty('env') ? project.'env' : 'default'
 Properties props = new Properties()
-def globalProperties = new File("$project.projectDir/profile/${environment}.properties")
+def globalProperties = new File("$project.projectDir/profile/global.properties")
 if (globalProperties.exists()) {
     props.load(new FileInputStream(globalProperties))
 }
