--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'cerberus-serverless-components'
 include 'cerberus-cloudfront-lambda',
         'cerberus-cross-region-backup-lambda',
         'cerberus-lambda-vpc',
-        'cerberus-artemis-kpi-lambda'
+        'cerberus-artemis-kpi-lambda',
+        'cerberus-metrics-topic'
 
 
