--- a/cerberus-cross-region-backup-lambda/application.yaml
+++ b/cerberus-cross-region-backup-lambda/application.yaml
@@ -43,6 +43,7 @@ Resources:
           KMS_KEY_ID: !Ref CerberusCrossRegionBackupKmsKey
           CERBERUS_URL: !Ref CerberusUrl
           ENVIRONMENT: !Ref Environment
+          CERBERUS_METRICS_TOPIC: !ImportValue CerberusMetricsTopicARN
       VpcConfig:
         SubnetIds: !Ref SubnetIds
         SecurityGroupIds: !Ref SecurityGroupIds
@@ -98,6 +99,16 @@ Resources:
                 Action:
                   - kms:Decrypt
                 Resource: "*"
+        -
+          PolicyName: "track-metrics"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              -
+                Effect: "Allow"
+                Action:
+                  - SNS:Publish
+                Resource: !ImportValue CerberusMetricsTopicARN
   CerberusCrossRegionBackupS3Bucket:
     Type: "AWS::S3::Bucket"
     Properties:
