--- a/cerberus-cross-region-backup-lambda/build.gradle
+++ b/cerberus-cross-region-backup-lambda/build.gradle
@@ -5,6 +5,8 @@ shadowJar {
     classifier = null
 }
 
+def awsSdkVersion = '1.11.118'
+
 dependencies {
     // Groovy stuffs
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.7'
@@ -15,30 +17,29 @@ dependencies {
     // Lambda logger impl
     compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j', version: '1.0.0'
 
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-kms', version: '1.11.76'
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-sts', version: '1.11.76'
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.76'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-kms', version: "${awsSdkVersion}"
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sts', version: "${awsSdkVersion}"
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: "${awsSdkVersion}"
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-sns', version: "${awsSdkVersion}"
 
     // Test deps
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 'aws-sam-deployer' {
-    region = project.'backup.region'
-    s3Bucket = project.'backup.lambda_artifact.s3_bucket'
+    region = getProfileProperty('backup.region')
+    s3Bucket = getProfileProperty('backup.lambda_artifact.s3_bucket')
     s3Prefix = "${project.getName()}-artifact-uploads"
-    stackName = "${project.environment}-${project.'backup.stack_suffix'}-${project.getName()}"
+    stackName = "${project.environment}-${getProfileProperty('backup.stack_suffix')}-cerberus-cross-region-backup"
     samTemplatePath = "${project.projectDir}${File.separator}application.yaml"
     tokenArtifactMap = [
             '@@CODE_URI@@': "${project.buildDir}${File.separator}libs${File.separator}${project.getName()}-${version}.jar"
     ]
     parameterOverrides = [
             Environment: project.environment,
-            CerberusUrl: project.'cerberus.url',
-            AdminUserArn: project.'cerberus.admin_user_arn',
-            SubnetIds: project.'backup.lambda_vpc.subnet_ids',
-            SecurityGroupIds: project.'backup.lambda_vpc.security_group_ids'
+            CerberusUrl: getProfileProperty('cerberus.url'),
+            AdminUserArn: getProfileProperty('cerberus.admin_user_arn'),
+            SubnetIds: getProfileProperty('backup.lambda_vpc.subnet_ids'),
+            SecurityGroupIds: getProfileProperty('backup.lambda_vpc.security_group_ids')
     ]
 }
-
-
