--- a/profile/example.properties
+++ b/profile/example.properties
@@ -17,6 +17,8 @@
 # General Cerberus config
 cerberus.url=[The Cerberus API to make backups of]
 cerberus.admin_user_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
+cerberus.primary_region=[The primary cerberus region]
+cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
 
 # Cross Region Backup Lambda specific deploy config
 backup.stack_suffix=[a suffix to apply to the backup lambda stack name]
