--- a/cerberus-cross-region-backup-lambda/application.yaml
+++ b/cerberus-cross-region-backup-lambda/application.yaml
@@ -33,7 +33,7 @@ Resources:
         Timer:
           Type: Schedule
           Properties:
-            Schedule: rate(60 minutes)
+            Schedule: cron(7 * * * ? *)
       Environment:
         Variables:
           ROLE_NAME: !Ref CerberusCrossRegionBackupRole
