Add jvm healthcheck with twig template

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'cerberus-cloudfront-lambda',
         'cerberus-cross-region-backup-lambda',
         'cerberus-lambda-vpc',
         'cerberus-artemis-kpi-lambda',
-        'cerberus-metrics-topic'
+        'cerberus-metrics-topic',
+        'cerberus-health-check-lambda'
 
 
