add new prop to example props file

--- a/profile/example.properties
+++ b/profile/example.properties
@@ -27,3 +27,4 @@ backup.lambda_artifact.s3_bucket=[The bucket to store the lambda artifact]
 backup.lambda_vpc.subnet_ids=[Comma_separated VPC subnet Ids to add for the lambda to use]
 backup.lambda_vpc.security_group_ids=[Comma-separated list of security group ids, to assign to lambda]
 
+health_check.regions=[comma deliminated list of regions to deploy the health check lambda to]
