Add README for health check

--- a/cerberus-health-check-lambda/build.gradle
+++ b/cerberus-health-check-lambda/build.gradle
@@ -34,6 +34,7 @@ task deploy(type: MultiRegionPackageAndDeploySamTask) {
             CerberusUrl: getProfileProperty('cerberus.url'),
             CerberusEnvironment: "${project.environment}"
     ]
+    logStackOutputs = true
 }
 
 tasks.deploy.dependsOn 'shadowJar'
