--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,8 @@ include 'cerberus-cloudfront-lambda',
         'cerberus-lambda-vpc',
         'cerberus-artemis-kpi-lambda',
         'cerberus-metrics-topic',
-        'cerberus-health-check-lambda'
+        'cerberus-health-check-lambda',
+        'cerberus-admin-iam-role',
+        'cerberus-clean-up-lambda'
 
 
