--- a/profile/example.properties
+++ b/profile/example.properties
@@ -16,7 +16,7 @@
 
 # General Cerberus config
 cerberus.url=[The Cerberus API to make backups of]
-cerberus.admin_user_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
+cerberus.admin_role_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
 cerberus.primary_region=[The primary cerberus region]
 cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
 
