--- a/cerberus-clean-up-lambda/build.gradle
+++ b/cerberus-clean-up-lambda/build.gradle
@@ -16,10 +16,12 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile 'com.nike:cerberus-client:2.3.0'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 task deploy(type: MultiRegionPackageAndDeploySamTask) {
-    regions = getProfileProperty('clean_up.regions').split(/,/)
+    regions = [getProfileProperty('clean_up.primary_region')]
     stackName = "${project.environment}-${project.name}"
     templatePath = "${project.projectDir}${File.separator}sam.yaml"
     regionToS3BucketMap = getRegionBucketMap(getProfileProperty('cerberus.lambda_uploads_region_buckets'))
