--- a/cerberus-cross-region-backup-lambda/application.yaml
+++ b/cerberus-cross-region-backup-lambda/application.yaml
@@ -82,7 +82,7 @@ Resources:
             Effect: "Allow"
             Principal:
               AWS:
-                - !Ref AdminUserArn
+                - !Ref AdminRoleArn
             Action:
               - "kms:*"
             Resource: "*"
