--- a/cerberus-cross-region-backup-lambda/application.yaml
+++ b/cerberus-cross-region-backup-lambda/application.yaml
@@ -8,6 +8,9 @@ Parameters:
   CerberusUrl:
     Type: String
     Description: The url for the cerberus environment
+  AdminRoleArn:
+    Type: String
+    Description: The arn for the admin user
   SubnetIds:
     Type: CommaDelimitedList
     Description: Comma-separated VPC subnet Ids to add
