--- a/profile/example.properties
+++ b/profile/example.properties
@@ -19,6 +19,7 @@ cerberus.url=[The Cerberus API to make backups of]
 cerberus.admin_role_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
 cerberus.primary_region=[The primary cerberus region]
 cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
+cerberus.lambda_vpc_region=[The region you want the lambdas to run in]
 
 # Cross Region Backup Lambda specific deploy config
 backup.stack_suffix=[a suffix to apply to the backup lambda stack name]
