--- a/cerberus-clean-up-lambda/build.gradle
+++ b/cerberus-clean-up-lambda/build.gradle
@@ -1,5 +1,3 @@
-import com.fieldju.gradle.plugins.lambdasam.tasks.MultiRegionPackageAndDeploySamTask
-
 version '1.0.0'
 
 shadowJar {
@@ -20,19 +18,19 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-task deploy(type: MultiRegionPackageAndDeploySamTask) {
-    def region = getProfileProperty('cerberus.lambda_vpc_region')
-    regions = [region]
+'aws-sam-deployer' {
+    region = getProfileProperty('cerberus.lambda_vpc_region')
+    s3Bucket = getProfileProperty('cerberus.lambda_artifact.s3_bucket')
+    s3Prefix = "${project.getName()}-artifact-uploads"
     stackName = "${project.environment}-${project.name}"
-    templatePath = "${project.projectDir}${File.separator}sam.yaml"
-    regionToS3BucketMap = getRegionBucketMap(getProfileProperty('cerberus.lambda_uploads_region_buckets'))
+    samTemplatePath = "${project.projectDir}${File.separator}application.yaml"
     tokenArtifactMap = [
             '@@CODE_URI@@': "${project.buildDir}${File.separator}libs${File.separator}${project.getName()}-${version}.jar"
     ]
     parameterOverrides = [
             CerberusUrl: getProfileProperty('cerberus.url'),
             CerberusEnvironment: "${project.environment}",
-            Region: region
+            KmsExpirationPeriodInDays: getProfileProperty('cleanup.kms_expiration_period_in_days')
     ]
     logStackOutputs = true
 }
