Add clean up lambda (#7)
* Make new modules for clean up lambda and admin IAM role
* Factor out IAM role from backup Lambda

--- a/profile/example.properties
+++ b/profile/example.properties
@@ -16,9 +16,11 @@
 
 # General Cerberus config
 cerberus.url=[The Cerberus API to make backups of]
-cerberus.admin_user_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
+cerberus.admin_principal_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
 cerberus.primary_region=[The primary cerberus region]
 cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
+cerberus.lambda_vpc_region=[The region you want the lambdas to run in]
+cerberus.lambda_artifact.s3_bucket=[The bucket name to store the compiled lambda artifact in]
 
 # Cross Region Backup Lambda specific deploy config
 backup.stack_suffix=[a suffix to apply to the backup lambda stack name]
@@ -28,3 +30,5 @@ backup.lambda_vpc.subnet_ids=[Comma_separated VPC subnet Ids to add for the lamb
 backup.lambda_vpc.security_group_ids=[Comma-separated list of security group ids, to assign to lambda]
 
 health_check.regions=[comma deliminated list of regions to deploy the health check lambda to]
+
+cleanup.kms_expiration_period_in_days=[Clean up KMS keys that have been inactive for n days]
