remove Lambda backup module

--- a/profile/example.properties
+++ b/profile/example.properties
@@ -15,19 +15,12 @@
 #
 
 # General Cerberus config
-cerberus.url=[The Cerberus API to make backups of]
+cerberus.url=[The Cerberus base url]
 cerberus.admin_principal_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
 cerberus.primary_region=[The primary cerberus region]
 cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
 cerberus.lambda_vpc_region=[The region you want the lambdas to run in]
 cerberus.lambda_artifact.s3_bucket=[The bucket name to store the compiled lambda artifact in]
-
-# Cross Region Backup Lambda specific deploy config
-backup.stack_suffix=[a suffix to apply to the backup lambda stack name]
-backup.region=[The region you want to run the lambdas and store the backups in]
-backup.lambda_artifact.s3_bucket=[The bucket to store the lambda artifact]
-backup.lambda_vpc.subnet_ids=[Comma_separated VPC subnet Ids to add for the lambda to use]
-backup.lambda_vpc.security_group_ids=[Comma-separated list of security group ids, to assign to lambda]
 
 health_check.regions=[comma deliminated list of regions to deploy the health check lambda to]
 
